--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
-<html lang="kr">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+          rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+          crossorigin="anonymous">
 </head>
 <body>
-<h2>게시글 작성</h2>
-<form action="/write" method="post">
-<input type ="text" name="title" id="title" placeholder="제목" size="100"> <br><br>
-    <textarea name="content" id="content" placeholder="내용을 입력해주세요" rows="20" cols="100" required></textarea>
-    <button type="sumit">작성</button>
-</form>
+<div class="container">
+    <h1>게시글 등록</h1>
+    <div class="col-md-12">
+        <div class="col-md-4">
+            <form action="/write" method="post">
+                <div class="form-group">
+                    <label for="title">제목</label>
+                    <input type="text" class="form-control" id="title" name="title" placeholder="제목을 입력하세요">
+                </div>
+                <div class="form-group">
+                    <label for="author">작성자</label>
+                    <input type="text" class="form-control" id="author" name="author" placeholder="작성자를 입력하세요">
+                </div>
+                <div class="form-group">
+                    <label for="content">내용</label>
+                    <textarea id="content" class="form-control" name="content" placeholder="내용을 입력하세요"></textarea>
+                </div>
+                <div class="form-group">
+                    <a href="" role="button" class="btn btn-secondary">취소</a>
+                    <button type="submit" id="btn-save" class="btn btn-primary">등록</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
 </body>
 </html>
