--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>게시글 등록</h1>
+    <h1>게시글 작성</h1>
     <div class="col-md-12">
         <div class="col-md-4">
             <form action="/write" method="post">
@@ -27,7 +27,7 @@
                 </div>
                 <div class="form-group">
                     <a href="" role="button" class="btn btn-secondary">취소</a>
-                    <button type="submit" id="btn-save" class="btn btn-primary">등록</button>
+                    <button type="submit" id="btn-save" class="btn btn-primary">작성</button>
                 </div>
             </form>
         </div>
