게시글 조회 기능 간단 구현

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -28,7 +28,7 @@
         <tbody id="tbody">
         <tr th:each = "board:${list}">
             <td th:text="${board.id}"></td>
-            <td th:text="${board.title}"></td>
+            <td><a th:href="@{'/post/view/' + ${board.id}}"><span th:text="${board.title}"></span></a></td>
             <td th:text="${board.author}"></td>
             <td th:text="${board.created_at}"></td>
         </tr>
