--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -12,7 +12,7 @@
 <div class="col-md-12">
     <div class="row">
         <div class="col-md-6">
-            <a href="/wirte" role="button" class="btn btn-primary">글 작성</a>
+            <a href="/write" role="button" class="btn btn-primary">글 작성</a>
         </div>
     </div>
     <br>
