--- a/src/main/resources/templates/update-form.html
+++ b/src/main/resources/templates/update-form.html
@@ -14,19 +14,19 @@
         <div class="col-md-4">
             <div class="form-group">
                 <label for="title">제목</label>
-                <span th:text="${post.title}" class="form-control" id="title" name="title"></span>
+                <input th:field="${post.title}" class="form-control" id="title" name="title"></input>
             </div>
             <div class="form-group">
                 <label for="author">작성자</label>
-                <span th:text="${post.author}" class="form-control" id="author" name="author"></span>
+                <input th:field="${post.author}" class="form-control" id="author" name="author"></input>
             </div>
             <div class="form-group">
                 <label for="content">내용</label>
-                <span th:text="${post.content}" class="form-control" id="content" name="content"></span>
+                <input th:field="${post.content}" class="form-control" id="content" name="content"></input>
             </div>
             <div class="form-group">
-                <a href="" role="button" class="btn btn-secondary">삭제</a>
-                <a th:href="@{'/update-form/' + ${post.id}}" role="button" class="btn btn-primary">수정</a>
+                <a href="" role="button" class="btn btn-secondary">취소</a>
+                <a href="" role="button" class="btn btn-primary">수정</a>
             </div>
         </div>
     </div>
