--- a/src/main/resources/templates/update-form.html
+++ b/src/main/resources/templates/update-form.html
@@ -9,25 +9,28 @@
 </head>
 <body>
 <div class="container">
-    <h1>게시글</h1>
-    <div class="col-md-12" th:each = "post:${post}">
+    <h1>게시글 수정</h1>
+    <div class="col-md-12">
         <div class="col-md-4">
-            <div class="form-group">
-                <label for="title">제목</label>
-                <input th:field="${post.title}" class="form-control" id="title" name="title"></input>
-            </div>
-            <div class="form-group">
-                <label for="author">작성자</label>
-                <input th:field="${post.author}" class="form-control" id="author" name="author"></input>
-            </div>
-            <div class="form-group">
-                <label for="content">내용</label>
-                <input th:field="${post.content}" class="form-control" id="content" name="content"></input>
-            </div>
-            <div class="form-group">
-                <a href="" role="button" class="btn btn-secondary">취소</a>
-                <a href="" role="button" class="btn btn-primary">수정</a>
-            </div>
+            <form action="/update" method="post" th:object="${post}">
+                <input type="hidden" th:field="${post.id}" name="id">
+                <div class="form-group">
+                    <label for="title">제목</label>
+                    <input th:field="${post.title}" class="form-control" id="title" name="title">
+                </div>
+                <div class="form-group">
+                    <label for="author">작성자</label>
+                    <input th:field="${post.author}" class="form-control" id="author" name="author">
+                </div>
+                <div class="form-group">
+                    <label for="content">내용</label>
+                    <textarea th:field="${post.content}" class="form-control" id="content" name="content"></textarea>
+                </div>
+                <div class="form-group">
+                    <a href="" role="button" class="btn btn-secondary">취소</a>
+                    <button type="submit" id="btn-update" class="btn btn-primary">저장</button>
+                </div>
+            </form>
         </div>
     </div>
 </div>
