--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -25,7 +25,7 @@
                 <span th:text="${post.content}" class="form-control" id="content" name="content"></span>
             </div>
             <div class="form-group">
-                <a href="" role="button" class="btn btn-secondary">삭제</a>
+                <a th:href="@{'/delete/' + ${post.id}}" role="button" class="btn btn-secondary">삭제</a>
                 <a th:href="@{'/update-form/' + ${post.id}}" role="button" class="btn btn-primary">수정</a>
             </div>
         </div>
