--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -26,7 +26,7 @@
                     <textarea id="content" class="form-control" name="content" placeholder="내용을 입력하세요"></textarea>
                 </div>
                 <div class="form-group">
-                    <a href="" role="button" class="btn btn-secondary">취소</a>
+                    <a href="/list" role="button" class="btn btn-secondary">취소</a>
                     <button type="submit" id="btn-save" class="btn btn-primary">작성</button>
                 </div>
             </form>
