--- a/src/main/resources/templates/update-form.html
+++ b/src/main/resources/templates/update-form.html
@@ -27,7 +27,7 @@
                     <textarea th:field="${post.content}" class="form-control" id="content" name="content"></textarea>
                 </div>
                 <div class="form-group">
-                    <a href="" role="button" class="btn btn-secondary">취소</a>
+                    <a th:href="@{'/post/view/' + ${post.id}}" role="button" class="btn btn-secondary">취소</a>
                     <button type="submit" id="btn-update" class="btn btn-primary">저장</button>
                 </div>
             </form>
