--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -15,15 +15,15 @@
             <form action="/write" method="post">
                 <div class="form-group">
                     <label for="title">제목</label>
-                    <input type="text" class="form-control" id="title" name="title" placeholder="제목을 입력하세요">
+                    <input type="text" class="form-control" id="title" name="title" placeholder="제목을 입력하세요" required>
                 </div>
                 <div class="form-group">
                     <label for="author">작성자</label>
-                    <input type="text" class="form-control" id="author" name="author" placeholder="작성자를 입력하세요">
+                    <input type="text" class="form-control" id="author" name="author" placeholder="작성자를 입력하세요" required>
                 </div>
                 <div class="form-group">
                     <label for="content">내용</label>
-                    <textarea id="content" class="form-control" name="content" placeholder="내용을 입력하세요"></textarea>
+                    <textarea id="content" class="form-control" name="content" placeholder="내용을 입력하세요" required></textarea>
                 </div>
                 <div class="form-group">
                     <a href="/list" role="button" class="btn btn-secondary">취소</a>
