--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -13,6 +13,8 @@
     <div class="row">
         <div class="col-md-6">
             <a href="/write" role="button" class="btn btn-primary">글 작성</a>
+            <a href="/member/save" role="button" class="btn btn-primary">회원가입</a>
+            <a href="/member/login" role="button" class="btn btn-primary">로그인</a>
         </div>
     </div>
     <br>
