--- a/src/main/resources/templates/memberForm.html
+++ b/src/main/resources/templates/memberForm.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="form-group">
                     <label for="password">비밀번호</label>
-                    <input type="text" class="form-control" name="memberPassword" required> <br>
+                    <input type="password" class="form-control" name="memberPassword" required> <br>
                 </div>
                 <div class="form-group">
                     <label for="name">이름</label>
