--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -15,6 +15,7 @@
             <a href="/write" role="button" class="btn btn-primary">글 작성</a>
             <a href="/member/save" role="button" class="btn btn-primary">회원가입</a>
             <a href="/member/login" role="button" class="btn btn-primary">로그인</a>
+            session 값 확인 : <p th:text="${session.loginEmail}"></p>
         </div>
     </div>
     <br>
