--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
     <h1>로그인</h1>
     <div class="col-md-12">
         <div class="col-md-4">
-            <form action="/login" method="post">
+            <form action="/member/login" method="post">
                 <div class="form-group">
                     <label for="email">이메일</label>
                     <input type="text" class="form-control" name="memberEmail" required>
