--- a/src/main/resources/templates/member-form.html
+++ b/src/main/resources/templates/member-form.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>로그인</title>
+    <title>member</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
           crossorigin="anonymous">
 </head>
 <body>
 <div class="container">
-    <h1>로그인</h1>
+    <h1>회원가입</h1>
     <div class="col-md-12">
         <div class="col-md-4">
-            <form action="/member/login" method="post">
+            <form action="/member" method="post">
                 <div class="form-group">
                     <label for="email">이메일</label>
-                    <input type="text" class="form-control" name="memberEmail" required>
+                    <input type="text" class="form-control" name="memberEmail" required> <br>
                 </div>
                 <div class="form-group">
                     <label for="password">비밀번호</label>
-                    <input type="password" class="form-control" name="memberPassword" required>
+                    <input type="password" class="form-control" name="memberPassword" required> <br>
                 </div>
-                <button type="submit" class="btn btn-primary">로그인</button>
+                <div class="form-group">
+                    <label for="name">이름</label>
+                    <input type="text" class="form-control" name="memberName" required> <br>
+                </div>
+                <a href="/posts" role="button" class="btn btn-secondary">취소</a>
+                <button type="submit" class="btn btn-primary">가입</button>
             </form>
         </div>
     </div>
