--- a/src/main/resources/templates/post-update.html
+++ b/src/main/resources/templates/post-update.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -9,25 +9,26 @@
 </head>
 <body>
 <div class="container">
-    <h1>게시글 작성</h1>
+    <h1>게시글 수정</h1>
     <div class="col-md-12">
         <div class="col-md-4">
-            <form action="/write" method="post">
+            <form action="/post/update" method="post" th:object="${post}">
+                <input type="hidden" th:field="${post.id}" name="id">
                 <div class="form-group">
                     <label for="title">제목</label>
-                    <input type="text" class="form-control" id="title" name="title" placeholder="제목을 입력하세요" required>
+                    <input th:field="${post.title}" class="form-control" id="title" name="title">
                 </div>
                 <div class="form-group">
                     <label for="author">작성자</label>
-                    <input type="text" class="form-control" id="author" name="author" placeholder="작성자를 입력하세요" required>
+                    <input th:field="${post.author}" class="form-control" id="author" name="author">
                 </div>
                 <div class="form-group">
                     <label for="content">내용</label>
-                    <textarea id="content" class="form-control" name="content" placeholder="내용을 입력하세요" required></textarea>
+                    <textarea th:field="${post.content}" class="form-control" id="content" name="content"></textarea>
                 </div>
                 <div class="form-group">
-                    <a href="/list" role="button" class="btn btn-secondary">취소</a>
-                    <button type="submit" id="btn-save" class="btn btn-primary">작성</button>
+                    <a th:href="@{'/post/' + ${post.id}}" role="button" class="btn btn-secondary">취소</a>
+                    <button type="submit" id="btn-update" class="btn btn-primary">저장</button>
                 </div>
             </form>
         </div>
