--- a/src/main/resources/templates/post-view.html
+++ b/src/main/resources/templates/post-view.html
@@ -25,8 +25,8 @@
                 <span th:text="${post.content}" class="form-control" id="content" name="content"></span>
             </div>
             <div class="form-group">
-                <a th:href="@{'/delete/' + ${post.id}}" role="button" class="btn btn-secondary">삭제</a>
-                <a th:href="@{'/update-form/' + ${post.id}}" role="button" class="btn btn-primary">수정</a>
+                <a th:href="@{'/post/delete/' + ${post.id}}" role="button" class="btn btn-secondary">삭제</a>
+                <a th:href="@{'/post/update/' + ${post.id}}" role="button" class="btn btn-primary">수정</a>
             </div>
         </div>
     </div>
