--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -12,10 +12,10 @@
 <div class="col-md-12">
     <div class="row">
         <div class="col-md-6">
-            <a href="/write" role="button" class="btn btn-primary">글 작성</a>
-            <a href="/member/save" role="button" class="btn btn-primary">회원가입</a>
-            <a href="/member/login" role="button" class="btn btn-primary">로그인</a>
-            session 값 확인 : <p th:text="${session.loginEmail}"></p>
+            <a href="/post" role="button" class="btn btn-primary">글 작성</a>
+            <a href="/member" role="button" class="btn btn-primary">회원가입</a>
+            <a href="/login" role="button" class="btn btn-primary">로그인</a>
+            session 값 확인 : <span th:text="${session.loginEmail}"></span>
         </div>
     </div>
     <br>
@@ -31,7 +31,7 @@
         <tbody id="tbody">
         <tr th:each = "board, iterStat: ${list}">
             <td th:text="${#lists.size(list) - iterStat.index}"></td>
-            <td><a th:href="@{'/post/view/' + ${board.id}}"><span th:text="${board.title}"></span></a></td>
+            <td><a th:href="@{'/post/' + ${board.id}}"><span th:text="${board.title}"></span></a></td>
             <td th:text="${board.author}"></td>
             <td th:text="${board.created_at}"></td>
         </tr>
